; ModuleID = '/home/carl/AnghaBench/redis/src/extr_networking.c_disconnectSlaves.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_networking.c_disconnectSlaves.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i64 }

@server = common dso_local global %struct.TYPE_5__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @disconnectSlaves() #0 {
  %1 = alloca %struct.TYPE_4__*, align 8
  br label %2

2:                                                ; preds = %6, %0
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @server, i32 0, i32 0), align 4
  %4 = call i64 @listLength(i32 %3)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %14

6:                                                ; preds = %2
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @server, i32 0, i32 0), align 4
  %8 = call %struct.TYPE_4__* @listFirst(i32 %7)
  store %struct.TYPE_4__* %8, %struct.TYPE_4__** %1, align 8
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %1, align 8
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to i32*
  %13 = call i32 @freeClient(i32* %12)
  br label %2

14:                                               ; preds = %2
  ret void
}

declare dso_local i64 @listLength(i32) #1

declare dso_local %struct.TYPE_4__* @listFirst(i32) #1

declare dso_local i32 @freeClient(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
